# file-organizer

./: pyproject.toml
organizer/: organizer.py
