[project]
name = "file-organizer"
version = "0.1.0"
description = ""
authors = [
    { name = "Arliton", email = "arlitonsantos84@gmail.com" }
]
readme = "README.md"
requires-python = "==3.13.*"  # 👈 aqui tá a versão que você quer

dependencies = [
    "typer",
    "rich",
    "fpdf (>=1.7.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
